# motor_control_tutorial

./: .gitignore  .gitmodules  README.md  motor_control_tutorial.code-workspace
.github/workflows/: pio_build.yml  ros2_build_and_test.yml
pio_project/: .clang-format  mbed_app.json  platformio.ini
pio_project/include/: can_map.hpp  control_target.hpp  ctrl_mode.hpp  robomas_board.hpp
pio_project/include/board/: motor_driver.hpp  robomas.hpp
pio_project/lib/: alps_common_lib  alps_mbed_lib  lib_external
pio_project/src/: dc_motor.cpp  led_blink.cpp  robomas_motor.cpp
pio_project/src/tools/: servo_motor_test_box.cpp
ros2_ws/: .clang-format  .gitignore  run_alps_lib_gtests.sh
ros2_ws/motor_control_interfaces/: CMakeLists.txt
ros2_ws/src/: alps_ros2_pkgs
ros2_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
ros2_ws/src/motor_control/: CMakeLists.txt  package.xml
ros2_ws/src/motor_control/include/motor_control/: can_map.hpp  control_target.hpp  ctrl_mode.hpp  key_input_thread.hpp  virtual_motor.hpp
ros2_ws/src/motor_control/launch/: angle_control.launch.py  angle_velocity_control.launch.py  control_commander.launch.py  launch_all.launch.py  motor.launch.py  real_motor.launch.py  sim_motor.launch.py  tools.launch.py  velocity_control.launch.py  visualize.launch.py
ros2_ws/src/motor_control/param_cfg/: angle_control.yaml  angle_velocity_control.yaml  control_commander.yaml  control_commander_answer.yaml  velocity_control.yaml
ros2_ws/src/motor_control/plotjuggler_cfg/: for_param_tuning.xml
ros2_ws/src/motor_control/rviz_cfg/: sim_motor.rviz  visualize.rviz
ros2_ws/src/motor_control/src/: angle_control.cpp  angle_velocity_control.cpp  can_ros_bridge.cpp  control_commander.cpp  sim_motor.cpp  velocity_control.cpp  visualize.cpp
ros2_ws/src/motor_control_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/motor_control_interfaces/msg/: ControlTarget.msg  TargetAngle.msg
